--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^0.19.2",
     "qrcode-terminal": "^0.12.0",
     "wechaty": "^0.40.10",
     "wechaty-puppet-padplus": "^0.6.3"
